gitops/apps/networking/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    istio-injection: enabled
    app.kubernetes.io/part-of: internal-developer-platform
