gitops/apps/networking/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: apps-permissive
  namespace: apps
spec:
  mtls:
    mode: PERMISSIVE
