gitops/apps/networking/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: idp-gateway
  namespace: apps
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
