gitops/apps/networking/virtualservices.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: catalog-api
  namespace: apps
spec:
  hosts:
    - "*"
  gateways:
    - idp-gateway
  http:
    - match:
        - uri:
            prefix: /catalog
      rewrite:
        uri: /
      route:
        - destination:
            host: catalog-api.apps.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: orders-api
  namespace: apps
spec:
  hosts:
    - "*"
  gateways:
    - idp-gateway
  http:
    - match:
        - uri:
            prefix: /orders
      rewrite:
        uri: /
      route:
        - destination:
            host: orders-api.apps.svc.cluster.local
            port:
              number: 8080
